--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
       "CloudStrm": {
-        "name": "云盘Strm生成支持webdav",
+        "name": "云盘Strm生成",
         "description": "监控文件创建，生成Strm文件。",
         "version": "3.6.1",
         "icon": "https://raw.githubusercontent.com/thsrite/MoviePilot-Plugins/main/icons/create.png",
