--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-      "CloudStrm": {
+      "CloudStrmwebdav": {
         "name": "云盘Strm生成（webdav版）",
         "description": "监控文件创建，生成Strm文件。",
         "version": "3.6.1",
