--- a/package.json
+++ b/package.json
@@ -1,11 +1,27 @@
 {
-      "CloudStrmwebdav": {
-        "name": "云盘Strm生成（webdav版）",
-        "description": "监控文件创建，生成Strm文件。",
-        "version": "3.6.1",
-        "icon": "https://raw.githubusercontent.com/thsrite/MoviePilot-Plugins/main/icons/create.png",
-        "author": "su2do",
-        "level": 1
+  "CloudStrm": {
+    "name": "云盘Strm生成（webdav版）",
+    "description": "监控文件创建，生成Strm文件。",
+    "labels": "云盘",
+    "version": "4.4.1",
+    "icon": "https://raw.githubusercontent.com/thsrite/MoviePilot-Plugins/main/icons/create.png",
+    "author": "su2do",
+    "level": 1,
+    "v2": true,
+    "history": {
+      "v4.4": "修复bug",
+      "v4.3": "回滚自定义媒体类型",
+      "v4.2": "扩展名转小写",
+      "v4.1": "支持自定义媒体类型",
+      "v4.0": "回归老版本",
+      "v3.8": "支持增量路径、支持自定义媒体类型（注：本次更新需修改配置使用）",
+      "v3.7": "api模式支持启用https",
+      "v3.6": "支持重建索引周期运行",
+      "v3.4": "交互命令",
+      "v3.1": "注册交互命令、注册公共服务",
+      "v3.0": "实现改为定时扫描"
+    }
+    }
       },
       "StrmConvert": {
         "name": "Strm文件模式转换",
